--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,16 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="author" content="Zeri Aaron Malacas">
+    <meta property="og:title" content="Zeri Aaron Malacas">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="image/zeri_trans_updated3.png">
+    <meta property="og:url" content="http://127.0.0.1:5500/home.html">
+    <meta property="og:description"
+        content="Zeri Aaron Malacas' website is a website for showcasing my skills, experience, and projects">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:site_name" content="Zeri Aaron Malacas">
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Zeri Aaron's Website</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
