--- a/public/index.html
+++ b/public/index.html
@@ -2,18 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="author" content="Zeri Aaron Malacas">
-    <meta property="og:title" content="Zeri Aaron Malacas">
+    <meta property="og:title" content="Zeri Aaron's Website">
     <meta property="og:type" content="website">
     <meta property="og:image" content="image/zeri_trans_updated3.png">
     <meta property="og:url" content="http://127.0.0.1:5500/home.html">
     <meta property="og:description"
-        content="Zeri Aaron Malacas' website is a website for showcasing my skills, experience, and projects">
+        content="A personal website for knowing me and showcasing my skills, experience and projects">
     <meta property="og:locale" content="en_US">
-    <meta property="og:site_name" content="Zeri Aaron Malacas">
+    <meta property="og:site_name" content="Zeri Aaron's Website">
+
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -29,6 +30,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+    rel="stylesheet" 
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
+    crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
     <title>Zeri Aaron's Website</title>
   </head>
   <body>
@@ -44,5 +52,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
+    crossorigin="anonymous"></script>
   </body>
 </html>
